apps/static/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mw-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
