apps/static/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static
  name: dpl
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: static
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: static
          image: static
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
