apps/static/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: svc
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: static
